# Submissions_C5

./: .env.example  .gitignore  Aditya_Sardana\assignment_3b_advanced_gradio_rag.ipynb  Agentic RAG.ipynb  Agentic_RAG.ipynb  Assignment_ROBOChatBot_solutio_gradio_rag.ipynb  Basics_Langchain_Chains_and_LECL.ipynb  Basics_Langchain_|_Chains_and_LECL.ipynb  Copy_of_multimodal_hf.ipynb  README.md  app.py  assignment_1_vector_db_basics.ipynb  requirements.txt  tribe_demo.ipynb
Group_15/backend/: .env.example  README.md  generate_diagram.py  graph_diagram.mmd  main.py  pyproject.toml  requirements.txt  test_retrievals.py
Group_15/backend/graph/: __init__.py  builder.py  state.py
Group_15/backend/graph/nodes/: aggregator.py  analysis.py  input_node.py  parallel_retrieval.py  query_builder.py  report_builder.py  requirements_matcher.py
Group_15/backend/prompts/: analysis.py  micro_summarize.py  query_builder.py
Group_15/backend/utils/: cache.py  http.py  llm.py
Group_9/ai-hackathon/: .env  .gitignore  README.md  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
Group_9/ai-hackathon/.data/exports/: ses_8eba58456e364e65b4aba183a6154056.md
Group_9/ai-hackathon/docs/: ARCHITECTURE.md  WORKFLOW_DIAGRAMS.md
Group_9/ai-hackathon/frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
Group_9/ai-hackathon/frontend/src/: index.css  main.tsx  react-markdown.d.ts
Group_9/ai-hackathon/prompts/system/: analyst.txt  contradiction_checker.txt  critical_analysis.txt  insight_generation.txt  planner.txt  qa_review.txt  reporter.txt  retriever.txt
Rajesh_Vasireddy/hackathon/: Makefile  README.md  pyproject.toml  requirements.txt
Rajesh_Vasireddy/hackathon/agents/: base_agent.py  notification.py
Rajesh_Vasireddy/hackathon/api/: main.py
Rajesh_Vasireddy/hackathon/hackathon/: .env.example  LICENSE  README.md  demo_script.md  docker-compose.yml  presentation.html
Rajesh_Vasireddy/hackathon/orchestrator/: graph.py
Rajesh_Vasireddy/hackathon/tests/: test_integrations.py  test_orchestrator.py
incident-analysis-suite/: README.MD  pyproject.toml  requirements.txt
incident-analysis-suite/api/: main.py
incident-analysis-suite/configs/: agents.yaml
incident-analysis-suite/diagrams/: incident_suite.excalidraw
incident-analysis-suite/docs/: architecture.md  code_visualizer.md
incident-analysis-suite/prompts/: code_generator_agent.md  cookbook_synthesizer.md  jira_ticket_agent.md  log_reader_classifier.md  notification_agent.md  orchestrator.md  remediation_agent.md
incident-analysis-suite/src/incident_suite/: __init__.py  service.py
incident-analysis-suite/ui/: app.py
(+834 files in other folders)
