[project]
name = "incident-suite"
version = "0.1.0"
description = "Multi-agent DevOps incident analysis suite with LangGraph, Slack, Salesforce, Jira, and OpenRouter."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.44.0",
  "graphviz>=0.20.3",
  "lancedb>=0.14.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.50",
  "langchain-community>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "slack-sdk>=3.33.0",
  "simple-salesforce>=1.12.6",
  "jira>=3.8.0",
  "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
