[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hackathon"
version = "0.1.0"
description = "Multi-Agent AI Deep Researcher MVP for Outskill AI Accelerator C5."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "gradio>=5.0,<6.0",
  "langgraph>=0.2,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "numpy>=1.26,<3.0",
  "pypdf>=4.2,<5.0",
  "reportlab>=4.2,<5.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8,<2.0"]
dev = ["pytest>=8.2,<9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

