[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["agents", "orchestrator", "api", "integrations", "frontend"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
